# git-test

./: .env.example  .gitignore  PROJECT_NOTES.md  README.md  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt  setup.sh
backend/: requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/: agents.py  channels.py  executions.py  workflows.py
backend/app/channels/: telegram_bot.py
backend/app/core/: agent_runtime.py  message_bus.py  tools.py  workflow_engine.py
backend/tests/: conftest.py  test_agents.py  test_message_delivery.py  test_workflows.py
config/: ship.yaml
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/AgentManager/: AgentCard.tsx  AgentForm.tsx  ChatModal.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AgentsPage.tsx  Dashboard.tsx  MonitorPage.tsx  WorkflowsPage.tsx
frontend/src/types/: index.ts
src/: main.py
src/agents/: awareness_agent.py  base.py  colreg_agent.py  navigation_agent.py  orchestrator.py  safety_agent.py
src/collision_avoidance/: cpa.py  planner.py  risk.py
src/colreg/: encounter.py  resolver.py  rules.py
src/core/: config.py  constants.py  exceptions.py  geo.py  types.py
src/logging/: vdr.py
src/navigation/: path.py  route.py
src/remote/: api.py
src/safety/: emergency.py  supervisor.py
src/sensors/: fusion.py  models.py
tests/: test_agents.py  test_colreg.py  test_cpa.py  test_safety.py
(+5 files in other folders)
